tests/ui/rfcs/rfc-1937-termination-trait/termination-trait-main-i32.stderr
error[E0277]: `main` has invalid return type `i32`
  --> $DIR/termination-trait-main-i32.rs:1:14
   |
LL | fn main() -> i32 {
   |              ^^^ `main` can only return types that implement `Termination`
   |
   = help: consider using `()`, or a `Result`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
